@@ -165,3 +165,38 @@ Release/FoXBot.tlog/FoXBot (user-MS-7A34's conflicted copy 2020-03-23).lastbuild
 Release/FoXBot.log
 Release/FoXBot (user-MS-7A34's conflicted copy 2020-03-23).lib
 *.log
+bot_start.PVS-Studio.i
+bot_start.cpp.PVS-Studio.preprocess.cmd.rsp
+bot_start.cpp.PVS-Studio.preprocess.cmd
+bot_start.cpp.PVS-Studio.cmd
+bot_start.cpp.PVS-Studio.cfg
+botcam.cpp.PVS-Studio.cfg
+botcam.cpp.PVS-Studio.cmd
+botcam.cpp.PVS-Studio.preprocess.cmd.rsp
+botcam.PVS-Studio.i
+engine.cpp.PVS-Studio.cfg
+engine.cpp.PVS-Studio.cmd
+engine.cpp.PVS-Studio.preprocess.cmd.rsp
+engine.PVS-Studio.i
+Release/foxbot.Build.CppClean.log
+Release/FoXBot.log
+Release/vc142.pdb
+bot_job_functions.cpp.PVS-Studio.cfg
+bot_job_functions.cpp.PVS-Studio.cmd
+bot_job_functions.cpp.PVS-Studio.preprocess.cmd
+bot_job_functions.cpp.PVS-Studio.preprocess.cmd.rsp
+bot_job_functions.PVS-Studio.i
+botcam.cpp.PVS-Studio.preprocess.cmd
+h_export.cpp.PVS-Studio.cfg
+h_export.cpp.PVS-Studio.cmd
+h_export.cpp.PVS-Studio.preprocess.cmd.rsp
+h_export.PVS-Studio.i
+bot_job_assessors.cpp.PVS-Studio.cfg
+bot_job_assessors.cpp.PVS-Studio.cmd
+bot_job_assessors.cpp.PVS-Studio.preprocess.cmd
+bot_job_assessors.cpp.PVS-Studio.preprocess.cmd.rsp
+bot_job_assessors.PVS-Studio.i
+bot_job_think.cpp.PVS-Studio.cfg
+bot_job_think.cpp.PVS-Studio.cmd
+bot_job_think.cpp.PVS-Studio.preprocess.cmd.rsp
+bot_job_think.PVS-Studio.i
