@@ -1,6 +1,7 @@
+c:\program files (x86)\steam\gameoverlayrenderer.log
+e:\dropbox\src\foxbot\release\foxbot.bsc
 e:\dropbox\src\foxbot\release\vc142.pdb
 e:\dropbox\src\foxbot\release\bot.sbr
-e:\dropbox\src\foxbot\release\botcam.sbr
 e:\dropbox\src\foxbot\release\bot_client.sbr
 e:\dropbox\src\foxbot\release\bot_combat.sbr
 e:\dropbox\src\foxbot\release\bot_job_assessors.sbr
@@ -8,6 +9,7 @@ e:\dropbox\src\foxbot\release\bot_job_functions.sbr
 e:\dropbox\src\foxbot\release\bot_job_think.sbr
 e:\dropbox\src\foxbot\release\bot_navigate.sbr
 e:\dropbox\src\foxbot\release\bot_start.sbr
+e:\dropbox\src\foxbot\release\botcam.sbr
 e:\dropbox\src\foxbot\release\dll.sbr
 e:\dropbox\src\foxbot\release\engine.sbr
 e:\dropbox\src\foxbot\release\h_export.sbr
@@ -16,4 +18,37 @@ e:\dropbox\src\foxbot\release\meta_api.sbr
 e:\dropbox\src\foxbot\release\sdk_util.sbr
 e:\dropbox\src\foxbot\release\util.sbr
 e:\dropbox\src\foxbot\release\waypoint.sbr
+e:\dropbox\src\foxbot\release\waypoint.obj
+e:\dropbox\src\foxbot\release\util.obj
+e:\dropbox\src\foxbot\release\sdk_util.obj
+e:\dropbox\src\foxbot\release\meta_api.obj
+e:\dropbox\src\foxbot\release\linkfunc.obj
+e:\dropbox\src\foxbot\release\h_export.obj
+e:\dropbox\src\foxbot\release\engine.obj
+e:\dropbox\src\foxbot\release\dll.obj
+e:\dropbox\src\foxbot\release\botcam.obj
+e:\dropbox\src\foxbot\release\bot_start.obj
+e:\dropbox\src\foxbot\release\bot_navigate.obj
+e:\dropbox\src\foxbot\release\bot_job_think.obj
+e:\dropbox\src\foxbot\release\bot_job_functions.obj
+e:\dropbox\src\foxbot\release\bot_job_assessors.obj
+e:\dropbox\src\foxbot\release\bot_combat.obj
+e:\dropbox\src\foxbot\release\bot_client.obj
+e:\dropbox\src\foxbot\release\bot.obj
+e:\dropbox\src\foxbot\release\foxbot.lib
+e:\dropbox\src\foxbot\release\foxbot.exp
+e:\dropbox\src\foxbot\release\foxbot.dll
+e:\dropbox\src\foxbot\release\res_fox.res
+e:\dropbox\src\foxbot\release\foxbot.tlog\bscmake.command.1.tlog
+e:\dropbox\src\foxbot\release\foxbot.tlog\bscmake.read.1.tlog
+e:\dropbox\src\foxbot\release\foxbot.tlog\bscmake.write.1.tlog
 e:\dropbox\src\foxbot\release\foxbot.tlog\cl.command.1.tlog
+e:\dropbox\src\foxbot\release\foxbot.tlog\cl.read.1.tlog
+e:\dropbox\src\foxbot\release\foxbot.tlog\cl.write.1.tlog
+e:\dropbox\src\foxbot\release\foxbot.tlog\foxbot.write.1u.tlog
+e:\dropbox\src\foxbot\release\foxbot.tlog\link.command.1.tlog
+e:\dropbox\src\foxbot\release\foxbot.tlog\link.read.1.tlog
+e:\dropbox\src\foxbot\release\foxbot.tlog\link.write.1.tlog
+e:\dropbox\src\foxbot\release\foxbot.tlog\rc.command.1.tlog
+e:\dropbox\src\foxbot\release\foxbot.tlog\rc.read.1.tlog
+e:\dropbox\src\foxbot\release\foxbot.tlog\rc.write.1.tlog
